--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,1 +1,4 @@
 + Zmiana kolumny ID w postgreSQL na Table_name_id
+  const terrainTypes = arrayToObjectKeyId("id", mapTerrainTypes) as Record<number, TMapTerrainTypes>
+
++signUpAction - useActionState -- nauka
